# coding_practice

./: .env.sample  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/00_env/: 01_python_env.md  02_claude_code.md  03_vscode.md
scripts/: python-gee.ipynb  sample.py
