[project]
name = "coding-practice"
version = "0.1.0"
description = "AIコードエージェントによるデータ・GIS解析入門"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.7.0",
    "earthengine-api>=1.7.31",
    "geemap>=0.38.1",
    "geopandas>=1.1.3",
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymupdf4llm>=1.27.2.3",
    "pyproj>=3.7.2",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "requests>=2.34.2",
]
